tests/valid/CoCoElementNotDefined.nestml
/**
 *
 *  CoCoElementNotDefined.nestml
 *
 *  This file is part of NEST.
 *
 *  Copyright (C) 2004 The NEST Initiative
 *
 *  NEST is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  NEST is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with NEST.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 * This model is used to check if all cocos work correctly by detecting corresponding broken context. Here, if
 * definition with not defined references is detected.
 * Positive case.
*/
neuron CoCoElementNotDefined:
    state:
        test integer = 0
        test1 integer = test +1 # all reference are defined and declared, thus everything correct
    end
end
